dpkg (1.15.8.3) UNRELEASED; urgency=low

  * Fix dpkg-divert test suite to cope with + and other special characters for
    regexps in the build directory name. Thanks to Jonathan Nieder for the
    patch and to Phil Kern for the report. Closes: #591182

 -- Raphaël Hertzog <hertzog@debian.org>  Sun, 01 Aug 2010 08:54:39 +0200

dpkg (1.15.8.2) unstable; urgency=low

  * Bump libdpkg-perl Depends on dpkg to 1.15.8, as it will break dpkg
    versions before that when installing and removing libdpkg-perl,
    because older update-alternatives and dpkg-divert require Dpkg.pm and
    Dpkg/Gettext.pm which will disappear due to the Replaces. Closes: #590867
    Thanks to Sven Joachim <svenjoac@gmx.de> for the analysis.
  * Allow specifying again absolute and relative paths for dpkg-buildpackage
    -r option. Closes: #591010

 -- Guillem Jover <guillem@debian.org>  Sat, 31 Jul 2010 04:20:01 +0200

dpkg (1.15.8.1) unstable; urgency=low

  * Fix off-by-one error in update-alternatives that lead to an infinite loop
    while writing the administrative file. Closes: #590854

 -- Raphaël Hertzog <hertzog@debian.org>  Thu, 29 Jul 2010 21:18:16 +0200

dpkg (1.15.8) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Add new commands --before-build and --after-build to dpkg-source
    and modify dpkg-buildpackage to call them automatically at the
    start and at the end of the process. With "3.0 (quilt)" source packages
    this ensures patches are applied even in case of binary-only builds.
    Closes: #572526
  * Merge non-regression test for Ubuntu's specificities concerning
    changelog handling. Closes: #582389
  * Fix some copy-paste mistakes in dpkg-architecture(1). Thanks to Ian Fleming
    <iflema@yahoo.com.au> for the patch and Colin Watson for forwarding out of
    Launchpad. Closes: #582404 LP: #564308
  * Clarify description of dpkg --configure in dpkg(1). Thanks to Colin Watson
    for the patch and to Robert Persson for the report.
    Closes: #582406 LP: #77287